Bug 405714 - trivial appearance bug
Summary: trivial appearance bug
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: agendaview (weekview) (other bugs)
Version First Reported In: 5.7.3
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-21 09:04 UTC by davidblunkett
Modified: 2021-11-30 04:08 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.0
Sentry Crash Report:


Attachments
Screenshot of the observed behaviour (15.61 KB, image/png)
2021-11-25 21:41 UTC, Nils
Details

Note You need to log in before you can comment on or make changes to this bug.
Description davidblunkett 2019-03-21 09:04:16 UTC
If your screen is sufficiently big that all 24 hours are visible then the scroll bar on the RHS disappears. when this happens the "day" panel at the top doesn't align with the "hours" pane below. Trivial but a little messy.

Any chance someone has fixed the start day of the week issue yet?
Comment 1 Nils 2021-11-25 21:41:02 UTC
Created attachment 143946 [details]
Screenshot of the observed behaviour
Comment 2 Allen Winter 2021-11-26 11:51:32 UTC
Friedrich, this may be related to your recent changes in eventviews maybe?
Comment 3 Allen Winter 2021-11-26 11:53:29 UTC
wait. what? is this really about version 5.7.3?
Comment 4 Friedrich W. H. Kossebau 2021-11-26 17:58:17 UTC
(In reply to Nils from comment #1)
> Created attachment 143946 [details]
> Screenshot of the observed behaviour

Hi Nils, what version of KOrganizer have you been using for that screenshot?

(In reply to Allen Winter from comment #2)
> Friedrich, this may be related to your recent changes in eventviews maybe?

My changes should not have changed any properties of those two Agenda widget instances, the relative layout structure around them is as before . The scrollbar appearing under certain condition would have another cause I would think. Even as the original bug report is from before that.
Comment 5 Friedrich W. H. Kossebau 2021-11-26 20:08:17 UTC
Just tested with latest development version (by resizing the window too a very large height, via moving the window by Alt+LMB partially out of screen and the enlarging by the bottom window border, multiple times).

As I touched the code recently and still remember the scrollbar width considering code, will try this WE a patch. No promises though.
Comment 6 Nils 2021-11-26 20:16:31 UTC
(In reply to Friedrich W. H. Kossebau from comment #4)
> (In reply to Nils from comment #1)
> > Created attachment 143946 [details]
> > Screenshot of the observed behaviour
> 
> Hi Nils, what version of KOrganizer have you been using for that screenshot?

I'm using version 5.18.3 (21.08.3), with French translations, from the Manjaro repository.
Comment 7 Bug Janitor Service 2021-11-29 06:11:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/52
Comment 8 Friedrich W. H. Kossebau 2021-11-29 06:14:10 UTC
Even simpler to reproduce: zooming in & out using Ctrl + scrollwheel :)

The linked MR fixes things for me, please have a look if you can.
Comment 9 Friedrich W. H. Kossebau 2021-11-30 04:08:28 UTC
Git commit fc416e6b16ed6ad165bf66de7bbccc216e69d2f1 by Friedrich W. H. Kossebau.
Committed on 29/11/2021 at 06:10.
Pushed by kossebau into branch 'release/21.12'.

Agenda view: fix misalignement of allday view & day headers \wo scrollbar
FIXED-IN: 5.19.0

M  +35   -9    src/agenda/agendaview.cpp
M  +1    -0    src/agenda/agendaview.h

https://invent.kde.org/pim/eventviews/commit/fc416e6b16ed6ad165bf66de7bbccc216e69d2f1