Agenda view: fix misalignement of allday view & day headers \wo scrollbar

BUG: 405714
FIXED-IN: 5.19.0